[tool.poetry]
name = "snick"
version = "1.1.0"
description = ""
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pprintpp = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.18.1"
black = "^21.11b1"
pytest-random-order = "^1.0.4"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
mypy = "^0.910"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order --failed-first --maxfail=1"
testpaths = ["tests"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pprintpp"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
