[tool.poetry]
name = "snick"
version = "1.5.0"
description = ""
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dusktreader/snick"
repository = "https://github.com/dusktreader/snick"

[tool.poetry.dependencies]
python = "^3.8"
pprintpp = "^0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-random-order = "^1.1.1"
pytest-cov = "^5.0.0"
ipython = "^8.12"
ruff = "^0.7.0"
mypy = "^1.12.0"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "8.3.0"
addopts = [
    "--random-order",
    "--failed-first",
    "--maxfail=1",
]
testpaths = ["tests"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pprintpp"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
